tests/invalid_nodepend/unicode_2.err_exp
unicode_2.m:005: Warning: the interface of module [38;5;87m`unicode_2'[39;49m [38;5;203mdoes not export[39;49m
unicode_2.m:005:   [38;5;203manything.[39;49m
unicode_2.m:009: Syntax error at token 'int': operator or `.' expected.
unicode_2.m:009: Syntax error: invalid Unicode character code.
For more information, recompile with `-E'.
